1、添加步骤3 2、抽离StepActivity代码 3、抽离StepPicturePlayerView 4、添加Fps解析

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
             android:name=".step2.Step2Activity"
             android:label="@string/action_step2"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".step3.Step3Activity"
+            android:label="@string/action_step3"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
