--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
         <activity
             android:name=".step4.Step4Activity"
             android:label="@string/action_step4" />
+        <activity
+            android:name=".gl.GLActivity"
+            android:label="@string/action_gl" />
     </application>
 
 </manifest>
