--- a/pictureplayerview/build.gradle
+++ b/pictureplayerview/build.gradle
@@ -1,25 +1,17 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.novoda.bintray-release'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 26
-        versionCode 4
-        versionName "0.1.3"
+        targetSdkVersion 27
+        versionCode VERSION_CODE as Integer
+        versionName VERSION_NAME
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
     }
 
     tasks.withType(Javadoc) {
@@ -30,19 +22,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:support-annotations:26.0.2'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:support-annotations:27.0.2'
 }
 
-publish {
-    userOrg = 'a483210'
-    groupId = 'com.xiuyukeji.pictureplayerview'
-    artifactId = 'pictureplayerview'
-    publishVersion = '0.1.3'
-    desc = 'picture player'
-    website = 'https://github.com/a483210/PicturePlayerView'
-}
+//apply from: rootProject.file('pictureplayerview/gradle-mvn-push.gradle')
+//apply from: rootProject.file('pictureplayerview/gradle-jcenter-push.gradle')
